[gd_scene load_steps=7 format=3 uid="uid://8lvtub6pjt5p"]

[ext_resource type="Texture2D" uid="uid://biv4xhabqjpxv" path="res://assets/slots/price_slot_bet.png" id="1_0x2x2"]
[ext_resource type="Texture2D" uid="uid://c24jfjd0taw1n" path="res://assets/slots/retry_button.png" id="2_2uqeg"]
[ext_resource type="Texture2D" uid="uid://cs1s1pk4uyrsp" path="res://assets/slots/slots_layer_0.png" id="3_c1lnn"]
[ext_resource type="Script" uid="uid://r5v3fvce4hl" path="res://slots/reels_all.gd" id="3_vg3qo"]
[ext_resource type="PackedScene" uid="uid://do7dolks675cv" path="res://slots/reel.tscn" id="4_0x2x2"]
[ext_resource type="Texture2D" uid="uid://c2edi3dt5mnk4" path="res://assets/slots/slots_layer_1.png" id="4_hddjk"]

[node name="slots_scene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI_and_buttons" type="Node2D" parent="."]

[node name="bet_buttons" type="Node2D" parent="UI_and_buttons"]

[node name="bet1" type="Button" parent="UI_and_buttons/bet_buttons"]
z_index = 3
offset_left = -424.0
offset_top = 200.0
offset_right = -296.0
offset_bottom = 264.0
text = "10"
icon = ExtResource("1_0x2x2")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="bet2" type="Button" parent="UI_and_buttons/bet_buttons"]
z_index = 3
offset_left = -304.0
offset_top = 200.0
offset_right = -176.0
offset_bottom = 264.0
text = "25"
icon = ExtResource("1_0x2x2")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="bet3" type="Button" parent="UI_and_buttons/bet_buttons"]
z_index = 3
offset_left = -184.0
offset_top = 200.0
offset_right = -56.0
offset_bottom = 264.0
text = "50"
icon = ExtResource("1_0x2x2")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="bet4" type="Button" parent="UI_and_buttons/bet_buttons"]
z_index = 3
offset_left = -64.0
offset_top = 200.0
offset_right = 64.0
offset_bottom = 264.0
text = "75"
icon = ExtResource("1_0x2x2")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="bet5" type="Button" parent="UI_and_buttons/bet_buttons"]
z_index = 3
offset_left = 56.0
offset_top = 200.0
offset_right = 184.0
offset_bottom = 264.0
text = "100"
icon = ExtResource("1_0x2x2")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="bet6" type="Button" parent="UI_and_buttons/bet_buttons"]
z_index = 3
offset_left = 176.0
offset_top = 200.0
offset_right = 304.0
offset_bottom = 264.0
text = "150"
icon = ExtResource("1_0x2x2")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="bet7" type="Button" parent="UI_and_buttons/bet_buttons"]
z_index = 3
offset_left = 296.0
offset_top = 200.0
offset_right = 424.0
offset_bottom = 264.0
text = "200"
icon = ExtResource("1_0x2x2")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="play_button" type="Button" parent="UI_and_buttons"]
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 376.0
offset_top = -40.0
offset_right = 456.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_2uqeg")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="slots_layer_0" type="Sprite2D" parent="UI_and_buttons"]
texture = ExtResource("3_c1lnn")

[node name="slots_layer_1" type="Sprite2D" parent="UI_and_buttons"]
z_index = 2
texture = ExtResource("4_hddjk")

[node name="reels" type="Node2D" parent="."]
script = ExtResource("3_vg3qo")

[node name="reel1" parent="reels" instance=ExtResource("4_0x2x2")]
position = Vector2(-256, 0)

[node name="reel2" parent="reels" instance=ExtResource("4_0x2x2")]
position = Vector2(-128, 0)

[node name="reel3" parent="reels" instance=ExtResource("4_0x2x2")]

[node name="reel4" parent="reels" instance=ExtResource("4_0x2x2")]
position = Vector2(128, 0)

[node name="reel5" parent="reels" instance=ExtResource("4_0x2x2")]
position = Vector2(256, 0)

[connection signal="pressed" from="UI_and_buttons/bet_buttons/bet1" to="reels" method="_on_bet_1_pressed"]
[connection signal="pressed" from="UI_and_buttons/bet_buttons/bet2" to="reels" method="_on_bet_2_pressed"]
[connection signal="pressed" from="UI_and_buttons/bet_buttons/bet3" to="reels" method="_on_bet_3_pressed"]
[connection signal="pressed" from="UI_and_buttons/bet_buttons/bet4" to="reels" method="_on_bet_4_pressed"]
[connection signal="pressed" from="UI_and_buttons/bet_buttons/bet5" to="reels" method="_on_bet_5_pressed"]
[connection signal="pressed" from="UI_and_buttons/bet_buttons/bet6" to="reels" method="_on_bet_6_pressed"]
[connection signal="pressed" from="UI_and_buttons/bet_buttons/bet7" to="reels" method="_on_bet_7_pressed"]
[connection signal="pressed" from="UI_and_buttons/play_button" to="reels" method="_on_play_button_pressed"]
